--- a/stories/index.html
+++ b/stories/index.html
@@ -2291,6 +2291,12 @@
       <td><a name="pa0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0066</td>
+      <td><a href="/stories/pa/0066_ਨੌਜ਼ੀਬਿੱਲ-ਅਤੇ-ਤਿੰਨ-ਵਾਲ_slides.html" target="_blank">ਨੌਜ਼ੀਬਿੱਲ ਅਤੇ ਤਿੰਨ ਵਾਲ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0067</td>
       <td><a href="/stories/pa/0067_ਖਾਣਾ-ਪਕਾਉਣਾ_slides.html" target="_blank">ਖਾਣਾ ਪਕਾਉਣਾ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2331,6 +2337,18 @@
       <td><a href="/stories/pa/0296_ਟੌਮ-ਕੇਲੇ-ਵੇਚਣ-ਵਾਲਾ_slides.html" target="_blank">ਟੌਮ ਕੇਲੇ ਵੇਚਣ ਵਾਲਾ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="pa0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0315</td>
+      <td><a href="/stories/pa/0315_ਸਕੀਮਾ-ਦਾ-ਗੀਤ_slides.html" target="_blank">ਸਕੀਮਾ ਦਾ ਗੀਤ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0315"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0324</td>
+      <td><a href="/stories/pa/0324_ਜਿਸ-ਦਿਨ-ਮੈਂ-ਸ਼ਹਿਰ-ਲਈ-ਘਰ-ਛੱਡਿਆ_slides.html" target="_blank">ਜਿਸ ਦਿਨ ਮੈਂ ਸ਼ਹਿਰ ਲਈ ਘਰ ਛੱਡਿਆ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0337</td>
@@ -2937,7 +2955,7 @@
       <td>0066</td>
       <td><a href="http://my.africanstorybook.org/stories/nozibele-and-three-hairs">Nozibele and the three hairs</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0066">ko</a>, <a href="#tl0066">tl</a>, <a href="#zh0066">zh</a></td>
+      <td><a href="#ko0066">ko</a>, <a href="#pa0066">pa</a>, <a href="#tl0066">tl</a>, <a href="#zh0066">zh</a></td>
     </tr>
     <tr>
       <td>0067</td>
@@ -3297,7 +3315,7 @@
       <td>0315</td>
       <td><a href="http://my.africanstorybook.org/stories/sakima%E2%80%99s-song">Sakima’s song</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ko0315">ko</a>, <a href="#tl0315">tl</a>, <a href="#zh0315">zh</a></td>
+      <td><a href="#ko0315">ko</a>, <a href="#pa0315">pa</a>, <a href="#tl0315">tl</a>, <a href="#zh0315">zh</a></td>
     </tr>
     <tr>
       <td>0319</td>
@@ -3315,7 +3333,7 @@
       <td>0324</td>
       <td><a href="http://my.africanstorybook.org/stories/day-i-left-home-city">Day I left home for the city</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ko0324">ko</a>, <a href="#tl0324">tl</a>, <a href="#zh0324">zh</a></td>
+      <td><a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#tl0324">tl</a>, <a href="#zh0324">zh</a></td>
     </tr>
     <tr>
       <td>0327</td>
