--- a/stories/pa/0066_ਨੌਜ਼ੀਬਿੱਲ-ਅਤੇ-ਤਿੰਨ-ਵਾਲ_slides.html
+++ b/stories/pa/0066_ਨੌਜ਼ੀਬਿੱਲ-ਅਤੇ-ਤਿੰਨ-ਵਾਲ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ? - Global African Storybook</title>
+  <title>ਨੌਜ਼ੀਬਿੱਲ ਅਤੇ ਤਿੰਨ ਵਾਲ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ਤਸ-ਕ-ਕਰ-ਰਹ-ਹ" class="slide level1">
-<h1>ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ?</h1>
+<section id="ਨਜਬਲ-ਅਤ-ਤਨ-ਵਲ" class="slide level1">
+<h1>ਨੌਜ਼ੀਬਿੱਲ ਅਤੇ ਤਿੰਨ ਵਾਲ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
-<p>ਮੈਂ ਗਾ ਰਿਹਾ ਹਾਂ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
+<p>ਬਹੁਤ ਸਮਾਂ ਪਹਿਲਾਂ ਤਿੰਨ ਕੁੜੀਆਂ ਲੱਕੜ ਇਕੱਠੀ ਕਰਨ ਲਈ ਬਾਹਰ ਗਈਆਂ।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
-<p>ਉਹ ਹੱਥ ਹਿਲਾਅ ਰਹੀ ਹੈ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
+<p>ਦਿਨ ਬਹੁਤ ਗਰਮ ਸੀ ਇਸ ਲਈ ਉਹ ਨਦੀ ਵਿੱਚ ਤਰਨ ਗਈਆਂ । ਉਹ ਖੇਡੀਆਂ, ਉਹਨਾਂ ਨੇ ਪਾਣੀ ਛਿੜਕਿਆ ਅਤੇ ਪਾਣੀ ਵਿੱਚ ਤੈਰੀਆਂ।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
-<p>ਮੈਂ ਤਾੜੀ ਮਾਰ ਰਿਹਾ ਹਾਂ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
+<p>ਅਚਾਨਕ, ਉਹਨਾਂ ਨੂੰ ਅਹਿਸਾਸ ਹੋਇਆ ਕਿ ਦੇਰ ਹੋ ਗਈ ਹੈ। ਉਹ ਛੇਤੀ ਪਿੰਡ ਵਾਪਸ ਆ ਗਈਆਂ।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
-<p>ਉਹ ਅੰਗੜਾਈ ਲੈ ਰਹੀ ਹੈ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
+<p>ਜਦ ਉਹ ਘਰ ਦੇ ਕਰੀਬ ਸਨ, ਨੌਜ਼ੀਬਿੱਲ ਨੇ ਆਪਣੀ ਗਰਦਨ ਤੇ ਹੱਥ ਰੱਖਿਆ। ਉਹ ਆਪਣਾ ਹਾਰ ਭੁਲ ਆਈ ਸੀ। &quot;ਕਿਰਪਾ ਕਰਕੇ ਮੇਰੇ ਨਾਲ ਵਾਪਸ ਆੳ!&quot; ਉਸ ਨੇ ਆਪਣੀਆਂ ਸਹੇਲੀਆਂ ਨੂੰ ਬੇਨਤੀ ਕੀਤੀ। ਪਰ ਉਸ ਦੀਆਂ ਸਹੇਲੀਆਂ ਨੇ ਕਿਹਾ ਕਿ ਬਹੁਤ ਦੇਰ ਹੋ ਗਈ ਹੈ।</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
-<p>ਉਹ ਬੁਲਾ ਰਿਹਾ ਹੈ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
+<p>ਇਸ ਲਈ ਨੌਜ਼ੀਬਿੱਲ ਵਾਪਸ ਨਦੀ ਨੂੰ ਇਕੱਲੀ ਚਲੀ ਗਈ। ਉਸ ਨੇ ਆਪਣਾ ਹਾਰ ਲੱਭਿਆ ਅਤੇ ਜਲਦਬਾਜੀ ਨਾਲ ਘਰ ਵੱਲ ਨੂੰ ਆਉਂਦੀ ਹਨੇਰੇ ਵਿੱਚ ਗੁੰਮ ਹੋ ਗਈ।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
-<p>ਮੈਂ ਜਵਾਬ ਦੇ ਰਿਹਾ ਹਾਂ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
+<p>ਬਹੁਤ ਦੂਰ ਇੱਕ ਝੋਪੜੀ ਵਿੱਚੋਂ ਉਸਨੇ ਚਾਨਣ ਆਉਂਦਾ ਦੇਖਿਆ । ਉਹ ਉਸ ਵੱਲ ਛੇਤੀ ਨਾਲ ਗਈ ਅਤੇ ਦਰਵਾਜ਼ਾ ਖੜਕਾਇਆ।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
-<p>ਉਹ ਸੁਣ ਰਹੀ ਹੈ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
+<p>ਉਸਨੂੰ ਬਹੁਤ ਹੈਰਾਨੀ ਹੋਈ ਜਦ ਇੱਕ ਕੁੱਤੇ ਨੇ ਦਰਵਾਜ਼ਾ ਖੋਲ੍ਹਿਆ ਅਤੇ ਕਿਹਾ, &quot;ਤੂੰ ਕੀ ਚਾਹੁੰਦੀ ਹੈ?&quot; &quot;ਮੈਂ ਗੁੰਮ ਹਾਂ ਅਤੇ ਮੈਨੂੰ ਸੌਣ ਲਈ ਜਗ੍ਹਾ ਦੀ ਲੋੜ ਹੈ,&quot; ਨੌਜ਼ੀਬਿੱਲ ਨੇ ਕਿਹਾ। &quot;ਅੰਦਰ ਆ, ਨਹੀਂ ਤਾਂ ਮੈਂ ਤੁਹਾਨੂੰ ਵੱਢ ਦੇਵਾਂਗਾ!&quot; ਕੁੱਤੇ ਨੇ ਕਿਹਾ। ਇਸ ਲਈ ਨੌਜ਼ੀਬਿੱਲ ਅੰਦਰ ਚਲੀ ਗਈ।</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
-<p>ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
+<p>ਫਿਰ ਕੁੱਤੇ ਨੇ ਕਿਹਾ, &quot;ਮੇਰੇ ਲਈ ਖਾਣਾਂ ਬਣਾ!&quot; &quot;ਪਰ ਮੈਂ ਕੁੱਤੇ ਲਈ ਪਹਿਲਾਂ ਕਦੇ ਵੀ ਖਾਣਾਂ ਨਹੀਂ ਬਣਾਇਆ,&quot; ਉਸ ਨੇ ਜਵਾਬ ਦਿੱਤਾ। &quot;ਖਾਣਾਂ ਬਣਾ, ਨਹੀਂ ਤਾਂ ਮੈਂ ਤੁਹਾਨੂੰ ਵੱਢ ਦੇਵਾਂਗਾ!&quot; ਕੁੱਤੇ ਨੇ ਕਿਹਾ। ਇਸ ਲਈ ਨੌਜ਼ੀਬਿੱਲ ਨੇ ਕੁੱਤੇ ਲਈ ਕੁਝ ਭੋਜਨ ਬਣਾਇਆ।</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,57 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ਤਸ-ਕ-ਕਰ-ਰਹ-ਹ-1">ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ?</h2>
-<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
+<p>ਫਿਰ ਕੁੱਤੇ ਨੇ ਕਿਹਾ, &quot;ਮੇਰਾ ਬਿਸਤਰਾ ਬਣਾ!&quot; ਨੌਜ਼ੀਬਿੱਲ ਨੇ ਜਵਾਬ ਦਿੱਤਾ, &quot;ਮੈਂ ਕੁੱਤੇ ਦਾ ਬਿਸਤਰਾ ਕਦੇ ਵੀ ਨਹੀਂ ਬਣਾਇਆ।&quot; “ਬਿਸਤਰਾ ਬਣਾ, ਨਹੀਂ ਤਾਂ ਮੈਂ ਤੁਹਾਨੂੰ ਵੱਢ ਦੇਵਾਂਗਾ!&quot; ਕੁੱਤੇ ਨੇ ਕਿਹਾ। ਇਸ ਲਈ ਨੌਜ਼ੀਬਿੱਲ ਨੇ ਬਿਸਤਰਾ ਬਣਾਇਆ।</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
+<p>ਹਰ ਦਿਨ ਉਸ ਨੂੰ ਕੁੱਤੇ ਲਈ ਖਾਣਾਂ ਪਕਾਉਣਾਂ ਪੈਂਦਾ, ਝਾੜੂ ਲਾਉਣਾ ਪੈਂਦਾ ਅਤੇ ਉਸਦੀਆਂ ਚੀਜ਼ਾਂ ਨੂੰ ਧੋਣਾ ਪੈਂਦਾ ਸੀ। ਫਿਰ ਇੱਕ ਦਿਨ ਕੁੱਤੇ ਨੇ ਕਿਹਾ, “&quot;ਨੌਜ਼ੀਬਿੱਲ, ਅੱਜ ਮੇਰੇ ਕੁਝ ਦੋਸਤ ਆ ਰਹੇ ਹਨ। ਮੇਰੇ ਵਾਪਸ ਆਉਣ ਤੋਂ ਪਹਿਲਾਂ, ਘਰ ਨੂੰ ਸੰਭਰਣਾ, ਭੋਜਨ ਪਕਾ ਦੇਣਾ ਅਤੇ ਮੇਰੀਆਂ ਚੀਜ਼ਾਂ ਨੂੰ ਧੋ ਦੇਣਾ।</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
+<p>ਜਦੋਂ ਹੀ ਕੁੱਤਾ ਗਿਆ, ਨੌਜ਼ੀਬਿੱਲ ਨੇ ਉਸ ਦੇ ਸਿਰ ਵਿੱਚੋਂ ਤਿੰਨ ਵਾਲ ਲਏ। ਉਸ ਨੇ ਇੱਕ ਵਾਲ ਮੰਜੇ ਹੇਠ ਰੱਖਿਆ, ਇੱਕ ਦਰਵਾਜ਼ੇ ਦੇ ਪਿੱਛੇ ਅਤੇ ਇੱਕ ਕਰਾਲ ਦੇ ਵਿੱਚ। ਫਿਰ ਜਿੰਨ੍ਹੀ ਛੇਤੀ ਹੋ ਸਕੇ ਉਹ ਘਰ ਵੱਲ ਨੂੰ ਭੱਜੀ ਗਈ।</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
+<p>ਜਦ ਕੁੱਤਾ ਵਾਪਸ ਆਇਆ, ਉਹ ਨੌਜ਼ੀਬਿੱਲ ਨੂੰ ਵੇਖ ਰਿਹਾ ਸੀ। &quot;ਨੌਜ਼ੀਬਿੱਲ, ਤੂੰ ਕਿੱਥੇ ਹੈ?&quot; ਉਸ ਨੇ ਰੌਲਾ ਪਾਇਆ। &quot;ਮੈਂ ਇੱਥੇ ਹਾਂ, ਮੰਜੇ ਹੇਠ,&quot; ਪਹਿਲਾ ਵਾਲ ਬੋਲਿਆ । &quot;ਮੈਂ ਇੱਥੇ ਹਾਂ, ਦਰਵਾਜ਼ੇ ਦੇ ਪਿੱਛੇ&quot; ਦੂਜਾ ਵਾਲ ਬੋਲਿਆ । &quot;ਮੈਂ ਇੱਥੇ ਹਾਂ, ਕਰਾਲ ਦੇ ਵਿੱਚ&quot; ਤੀਜਾ ਵਾਲ ਬੋਲਿਆ ।</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
+<p>ਫਿਰ ਕੁੱਤੇ ਨੂੰ ਪਤਾ ਲੱਗ ਗਿਆ ਕਿ ਨੌਜ਼ੀਬਿੱਲ ਨੇ ਉਸ ਨੂੰ ਧੋਖਾ ਦਿੱਤਾ ਸੀ। ਇਸ ਲਈ ਉਹ ਪਿੰਡ ਵੱਲ ਨਸਿਆ ਗਿਆ। ਪਰ ਨੌਜ਼ੀਬਿੱਲ ਦੇ ਭਰਾ ਵੱਡੀਆਂ ਸੋਟੀਆਂ ਨਾਲ ਉਸ ਦੀ ਉਡੀਕ ਕਰ ਰਹੇ ਸਨ । ਕੁੱਤੇ ਨੇ ਆਪਣਾ ਰਾਹ ਬਦਲਿਆ ਅਤੇ ਦੂਰ ਭੱਜ ਗਿਆ । ਉਹ ਬਾਅਦ ਵਿੱਚ ਕਦੇ ਵੀ ਦਿਖਾਈ ਨਹੀਂ ਦਿੱਤਾ ।</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ਨਜਬਲ-ਅਤ-ਤਨ-ਵਲ-1">ਨੌਜ਼ੀਬਿੱਲ ਅਤੇ ਤਿੰਨ ਵਾਲ</h2>
+<strong>Text:</strong> Tessa Welch<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-are-you-doing'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/nozibele-and-three-hairs'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
