--- a/stories/pa/0234_ਐਂਨਡਿਸਵਾ-ਫੁੱਟਬਾਲ-ਸਟਾਰ_slides.html
+++ b/stories/pa/0234_ਐਂਨਡਿਸਵਾ-ਫੁੱਟਬਾਲ-ਸਟਾਰ_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
-<p>ਮੁੰਡਿਆਂ ਨੇ ਉਸ ਨੂੰ ਨੈੱਟਬਾਲ ਖੇਡਣ ਲਈ ਕਿਹਾl ਉਹਨਾਂ ਨੇ ਕਿਹਾ ਕਿ ਨੈੱਟਬਾਲ ਕੁੜੀਆਂ ਲਈ ਹੈ ਅਤੇ ਫੁਟਬਾਲ ਮੁੰਡਿਆਂ ਲਈ ਹੈ। ਐਂਨਡਿਸਵਾ ਨਿਰਾਸ ਸੀ</p>
+<p>ਮੁੰਡਿਆਂ ਨੇ ਉਸ ਨੂੰ ਨੈੱਟਬਾਲ ਖੇਡਣ ਲਈ ਕਿਹਾ। ਉਹਨਾਂ ਨੇ ਕਿਹਾ ਕਿ ਨੈੱਟਬਾਲ ਕੁੜੀਆਂ ਲਈ ਹੈ ਅਤੇ ਫੁਟਬਾਲ ਮੁੰਡਿਆਂ ਲਈ ਹੈ। ਐਂਨਡਿਸਵਾ ਨਿਰਾਸ ਸੀ</p>
 <center>
 <strong>3</strong>
 </center>
