--- a/stories/pa/0296_ਟੌਮ-ਕੇਲੇ-ਵੇਚਣ-ਵਾਲਾ.html
+++ b/stories/pa/0296_ਟੌਮ-ਕੇਲੇ-ਵੇਚਣ-ਵਾਲਾ.html
@@ -70,14 +70,14 @@ Humphreys Odunga<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
 
-<p>ਪਰ ਕੋਈ ਵੀ ਟੌਮ ਦੇ ਕੇਲੇ ਖਰੀਦ ਨਹੀਂ ਰਿਹਾ। ਉਹ ਔਰਤਾਂ ਤੋਂ ਫਲ ਖਰੀਦਣਾ ਪਸੰਦ ਕਰਦੇ ਹਨI</p>
+<p>ਪਰ ਕੋਈ ਵੀ ਟੌਮ ਦੇ ਕੇਲੇ ਖਰੀਦ ਨਹੀਂ ਰਿਹਾ। ਉਹ ਔਰਤਾਂ ਤੋਂ ਫਲ ਖਰੀਦਣਾ ਪਸੰਦ ਕਰਦੇ ਹਨ।</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
 
-<p>“ਸਾਡੇ ਭਾਈਚਾਰੇ ਵਿੱਚ, ਸਿਰਫ਼ ਔਰਤਾਂ ਫਲ ਵੇਚਦੀਆਂ ਹਨ,” ਲੋਕ ਕਹਿੰਦੇ ਹਨ I “ਇਹ ਕਿਸ ਕਿਸਮ ਦਾ ਆਦਮੀ ਹੈ?” ਲੋਕ ਪੁੱਛਦੇ।</p>
+<p>“ਸਾਡੇ ਭਾਈਚਾਰੇ ਵਿੱਚ, ਸਿਰਫ਼ ਔਰਤਾਂ ਫਲ ਵੇਚਦੀਆਂ ਹਨ,” ਲੋਕ ਕਹਿੰਦੇ ਹਨ । “ਇਹ ਕਿਸ ਕਿਸਮ ਦਾ ਆਦਮੀ ਹੈ?” ਲੋਕ ਪੁੱਛਦੇ।</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Humphreys Odunga<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
 
-<p>ਇੱਕ ਔਰਤ ਟੋਕਰੀ ਵਿਚੋਂ ਕੁੱਝ ਕੇਲੇ ਚੁੱਕਦੀ ਹੈ। ਉਹ ਕੇਲਿਆਂ ਨੂੰ ਧਿਆਨ ਨਾਲ ਵੇਖਦੀ ਹੈ I</p>
+<p>ਇੱਕ ਔਰਤ ਟੋਕਰੀ ਵਿਚੋਂ ਕੁੱਝ ਕੇਲੇ ਚੁੱਕਦੀ ਹੈ। ਉਹ ਕੇਲਿਆਂ ਨੂੰ ਧਿਆਨ ਨਾਲ ਵੇਖਦੀ ਹੈ ।</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
