--- a/stories/pa/0315_ਸਕੀਮਾ-ਦਾ-ਗੀਤ_slides.html
+++ b/stories/pa/0315_ਸਕੀਮਾ-ਦਾ-ਗੀਤ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ? - Global African Storybook</title>
+  <title>ਸਕੀਮਾ ਦਾ ਗੀਤ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ਤਸ-ਕ-ਕਰ-ਰਹ-ਹ" class="slide level1">
-<h1>ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ?</h1>
+<section id="ਸਕਮ-ਦ-ਗਤ" class="slide level1">
+<h1>ਸਕੀਮਾ ਦਾ ਗੀਤ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
-<p>ਮੈਂ ਗਾ ਰਿਹਾ ਹਾਂ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/02.jpg" /></p>
+<p>ਸਕੀਮਾ ਆਪਣੇ ਮਾਤਾ-ਪਿਤਾ ਅਤੇ ਚਾਰ ਸਾਲ ਦੀ ਭੈਣ ਨਾਲ ਰਹਿੰਦਾ ਸੀ। ਉਹ ਇੱਕ ਅਮੀਰ ਆਦਮੀ ਦੀ ਜ਼ਮੀਨ ਤੇ ਰਹਿੰਦੇ ਸਨ। ਉਹਨਾਂ ਦੀ ਘਾਹ-ਫੂਸ ਦੀ ਝੋਪੜੀ ਦਰਖ਼ਤਾਂ ਦੇ ਇੱਕ ਕਤਾਰ ਦੇ ਅੰਤ ਤੇ ਸੀ।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
-<p>ਉਹ ਹੱਥ ਹਿਲਾਅ ਰਹੀ ਹੈ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/03.jpg" /></p>
+<p>ਜਦ ਸਕੀਮਾ ਤਿੰਨ ਸਾਲ ਦੀ ਉਮਰ ਦਾ ਸੀ, ਉਹ ਬਿਮਾਰ ਹੋ ਗਿਆ ਅਤੇ ਉਸ ਦੀ ਨਜ਼ਰ ਚਲੀ ਗਈ। ਸਕੀਮਾ ਇੱਕ ਗੁਣਵੰਤੀ ਮੁੰਡਾ ਸੀ।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
-<p>ਮੈਂ ਤਾੜੀ ਮਾਰ ਰਿਹਾ ਹਾਂ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/04.jpg" /></p>
+<p>ਸਕੀਮਾ ਬਹੁਤ ਕੁਝ ਕਰਦਾ ਸੀ ਜੋ ਕਿ ਹੋਰ ਛੇ ਸਾਲ ਦੀ ਉਮਰ ਦੇ ਮੁੰਡੇ ਨਹੀਂ ਸੀ ਕਰਦੇ। ਜਿਵੇਂ, ਉਹ ਪਿੰਡ ਦੇ ਵਡੇਰਿਆਂ ਨਾਲ ਬੈਠ ਕੇ ਮਹੱਤਵਪੂਰਨ ਮਾਮਲਿਆਂ ਤੇ ਚਰਚਾ ਕਰ ਸਕਦਾ ਸੀ।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
-<p>ਉਹ ਅੰਗੜਾਈ ਲੈ ਰਹੀ ਹੈ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/05.jpg" /></p>
+<p>ਸਕੀਮਾ ਦੇ ਮਾਪੇ ਅਮੀਰ ਆਦਮੀ ਦੇ ਘਰ ਵਿੱਚ ਕੰਮ ਕਰਦੇ ਸਨ। ਉਹ ਘਰ ਤੋਂ ਸਵੇਰੇ ਚਲੇ ਜਾਂਦੇ ਅਤੇ ਸ਼ਾਮ ਨੂੰ ਦੇਰ ਵਾਪਸ ਆਉਂਦੇ। ਸਕੀਮਾ ਆਪਣੀ ਛੋਟੀ ਭੈਣ ਨਾਲ ਰਹਿ ਜਾਂਦਾ ਸੀ।</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
-<p>ਉਹ ਬੁਲਾ ਰਿਹਾ ਹੈ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/06.jpg" /></p>
+<p>ਸਕੀਮਾ ਗੀਤ ਗਾਉਂਣੇ ਪਸੰਦ ਕਰਦਾ ਸੀ। ਇੱਕ ਦਿਨ ਉਸਨੂੰ ਮਾਂ ਨੇ ਪੁਛਿਆ, “ਸਕੀਮਾ, ਤੂੰ ਇਹ ਗੀਤ ਕਿੱਥੌ ਸਿੱਖਦਾ ਹੈ?”</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
-<p>ਮੈਂ ਜਵਾਬ ਦੇ ਰਿਹਾ ਹਾਂ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/07.jpg" /></p>
+<p>ਸਕੀਮਾ ਨੇ ਜਵਾਬ ਦਿੱਤਾ, “ਬੱਸ ਆ ਜਾਂਦੇ ਨੇ, ਮਾਂ। ਮੈਂ ਆਪਣੇ ਮਨ ਵਿੱਚ ਸੁਣਦਾ ਹਾਂ ਅਤੇ ਫਿਰ ਗਾ ਦਿੰਦਾ ਹਾਂ।”</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
-<p>ਉਹ ਸੁਣ ਰਹੀ ਹੈ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/08.jpg" /></p>
+<p>ਸਕੀਮਾ ਆਪਣੀ ਛੋਟੀ ਭੈਣ ਲਈ ਗਾਉਂਣਾ ਪਸੰਦ ਕਰਦਾ ਸੀ ਖਾਸ ਕਰਕੇ ਜੱਦ ਉਸਨੂੰ ਭੁੱਖ ਲੱਗਦੀ ਸੀ। ਉਹ ਆਪਣੇ ਚਹੇਤੇ ਗੀਤ ਗਾਉਂਦਾ ਅਤੇ ਉਸ ਦੀ ਭੈਣ ਸੁਣਦੀ ਸੀ। ਉਹ ਸੁਖਮਈ ਟਿਊਨ ਤੇ ਝੂਮਦੀ ਸੀ।</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
-<p>ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/09.jpg" /></p>
+<p>&quot;ਕੀ ਤੁਸੀਂ ਮੁੜ ਮੁੜ ਇਸ ਨੂੰ ਗਾ ਸਕਦੇ ਹੋ ਸਕੀਮਾ,&quot; ਉਸਦੀ ਭੈਣ ਉਸ ਨੂੰ ਬੇਨਤੀ ਕਰਦੀ ਸੀ। ਸਕੀਮਾ ਸਵੀਕਾਰ ਕਰਕੇ ਮੁੜ ਮੁੜ ਗਾਉਂਦਾ ਸੀ।</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,102 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ਤਸ-ਕ-ਕਰ-ਰਹ-ਹ-1">ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ?</h2>
-<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/10.jpg" /></p>
+<p>ਇਕ ਸ਼ਾਮ ਜਦ ਉਸ ਦੇ ਮਾਤਾ-ਪਿਤਾ ਘਰ ਵਾਪਸ ਆਏ ਉਹ ਬਹੁਤ ਹੀ ਚੁੱਪ ਸਨ। ਸਕੀਮਾ ਨੂੰ ਪਤਾ ਸੀ ਕਿ ਕੁਝ ਗਲਤ ਸੀ।</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/11.jpg" /></p>
+<p>&quot;ਕੀ ਹੋਇਆ ਹੈ, ਮਾਤਾ ਪਿਤਾ?&quot; ਸਕੀਮਾ ਨੇ ਪੁੱਛਿਆ। ਸਕੀਮਾ ਨੂੰ ਪਤਾ ਲੱਗਾ ਕਿ ਅਮੀਰ ਆਦਮੀ ਦਾ ਪੁੱਤਰ ਗੁੰਮ ਸੀ। ਆਦਮੀ ਬਹੁਤ ਹੀ ਉਦਾਸ ਅਤੇ ਇਕੱਲਾ ਮਹਿਸੂਸ ਕਰ ਰਿਹਾ ਸੀ।</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/12.jpg" /></p>
+<p>ਮੈਂ ਉਸ ਲਈ ਗਾ ਸਕਦਾ ਹਾਂ ਫਿਰ ਸ਼ਾਇਦ ਉਹ ਮੁੜ ਖੁਸ਼ ਹੋ ਜਾਵੇ,&quot; ਸਕੀਮਾ ਨੇ ਆਪਦੇ ਮਾਪੇ ਨੂੰ ਦੱਸਿਆ। ਪਰ ਉਸਦੇ ਮਾਪੇ ਨੇ ਉਸ ਨੂੰ ਨਜ਼ਰਅੰਦਾਜ਼ ਕਰ ਦਿੱਤਾ । &quot;ਉਹ ਬਹੁਤ ਹੀ ਅਮੀਰ ਹੈ । ਤੂੰ ਸਿਰਫ ਇੱਕ ਅੰਨ੍ਹਾ ਮੁੰਡਾ ਹੈ। ਕੀ ਤੈਨੂੰ ਲੱਗਦਾ ਹੈ ਕਿ ਤੇਰਾ ਗੀਤ ਉਸ ਦੀ ਮਦਦ ਕਰੇਗਾ?&quot;</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/13.jpg" /></p>
+<p>ਪਰ, ਸਕੀਮਾ ਨੇ ਹਾਰ ਨਹੀਂ ਮੰਨ੍ਹੀ। ਉਸਦੀ ਛੋਟੀ ਭੈਣ ਨੇ ਉਸਨੂੰ ਸਹਿਯੋਗ ਦਿੱਤਾ। ਉਸ ਨੇ ਕਿਹਾ, &quot;ਸਕੀਮਾ ਦੇ ਗੀਤ ਮੈਨੂੰ ਦਿਲਾਸਾ ਦਿੰਦੇ ਹਨ ਜਦ ਮੈਨੂੰ ਭੁੱਖ ਲਗਦੀ ਹੈ। ਉਹ ਅਮੀਰ ਆਦਮੀ ਨੂੰ ਵੀ ਦਿਲਾਸਾ ਦੇਣਗੇ।”</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/14.jpg" /></p>
+<p>ਅਗਲੇ ਦਿਨ, ਸਕੀਮਾ ਨੇ ਆਪਣੀ ਛੋਟੀ ਭੈਣ ਨੂੰ ਅਮੀਰ ਆਦਮੀ ਦੇ ਘਰ ਲੈ ਕੇ ਜਾਣ ਨੂੰ ਕਿਹਾ।</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/15.jpg" /></p>
+<p>ਉਹ ਇੱਕ ਵੱਡੀ ਖਿੜਕੀ ਹੇਠ ਖੜ੍ਹਕੇ ਉਸਦਾ ਮਨਪਸੰਦ ਗੀਤ ਗਾਉਣ ਲੱਗਾ। ਹੌਲੀ ਹੌਲੀ, ਅਮੀਰ ਆਦਮੀ ਦਾ ਸਿਰ ਵੱਡੀ ਖਿੜਕੀ ਤੋਂ ਦਿਖਣਾਂ ਸ਼ੁਰੂ ਹੋ ਗਿਆ।</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/16.jpg" /></p>
+<p>ਕਰਮਚਾਰੀ ਆਪਣਾ ਕੰਮ ਕਰਦੇ ਕਰਦੇ ਰੁਕ ਗਏ। ਉਹ ਸਕੀਮਾ ਦਾ ਸੁੰਦਰ ਗੀਤ ਸੁਣਨ ਲਗੇ। ਪਰ ਇੱਕ ਆਦਮੀ ਨੇ ਕਿਹਾ, &quot;ਕੋਈ ਵੀ ਮਾਲਕ ਨੂੰ ਦਿਲਾਸਾ ਨਹੀਂ ਦੇ ਪਾਇਆ। ਇਹ ਅੰਨ੍ਹਾ ਮੁੰਡਾ ਸੋਚਦਾ ਹੈ ਕਿ ਉਹ ਉਸਨੂੰ ਦਿਲਾਸਾ ਦੇਵੇਗਾ?&quot;</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/17.jpg" /></p>
+<p>ਸਕੀਮਾ ਗੀਤ ਖਤਮ ਕਰਕੇ ਮੁੜਨ ਲੱਗਾ ਸੀ। ਪਰ ਅਮੀਰ ਆਦਮੀ ਬਾਹਰ ਆਕੇ ਕਹਿੰਦਾ, &quot;ਕਿਰਪਾ ਕਰਕੇ ਇੱਕ ਵਾਰੀ ਫਿਰ ਗਾਉ।&quot;</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/18.jpg" /></p>
+<p>ਉਸ ਪਲ ਵਿੱਚ ਦੋ ਆਦਮੀ ਇੱਕ ਸਟਰੈਚਰ ਤੇ ਕਿਸੇ ਨੂੰ ਲੈ ਕੇ ਆਏ। ਉਹਨਾਂ ਨੇ ਅਮੀਰ ਆਦਮੀ ਦੇ ਪੁੱਤਰ ਨੂੰ ਸੜਕ ਦੇ ਪਾਸੇ ਕੁੱਟਿਆ ਪਇਆ ਲੱਭਿਆ ਸੀ।</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/19.jpg" /></p>
+<p>ਅਮੀਰ ਆਦਮੀ ਆਪਣੇ ਪੁੱਤਰ ਨੂੰ ਦੋਬਾਰਾ ਦੇਖਕੇ ਬਹੁਤ ਖੁਸ਼ ਹੋਇਆ। ਉਸਨੇ ਸਕੀਮਾ ਨੂੰ ਦਿਲਾਸਾ ਦੇਣ ਲਈ ਇਨਾਮ ਦਿੱਤਾ। ਉਹ ਆਪਣੇ ਪੁੱਤਰ ਅਤੇ ਸਕੀਮਾ ਨੂੰ ਹਸਪਤਾਲ ਲੈ ਕੇ ਗਿਆ ਤਾਂ ਕਿ ਉਸਦੀ ਨਜ਼ਰ ਵਾਪਸ ਆ ਸਕੇ।</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ਸਕਮ-ਦ-ਗਤ-1">ਸਕੀਮਾ ਦਾ ਗੀਤ</h2>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Peris Wachuka<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-are-you-doing'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/sakima%E2%80%99s-song'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
