--- a/stories/pa/0324_ਜਿਸ-ਦਿਨ-ਮੈਂ-ਸ਼ਹਿਰ-ਲਈ-ਘਰ-ਛੱਡਿਆ_slides.html
+++ b/stories/pa/0324_ਜਿਸ-ਦਿਨ-ਮੈਂ-ਸ਼ਹਿਰ-ਲਈ-ਘਰ-ਛੱਡਿਆ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ? - Global African Storybook</title>
+  <title>ਜਿਸ ਦਿਨ ਮੈਂ ਸ਼ਹਿਰ ਲਈ ਘਰ ਛੱਡਿਆ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ਤਸ-ਕ-ਕਰ-ਰਹ-ਹ" class="slide level1">
-<h1>ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ?</h1>
+<section id="ਜਸ-ਦਨ-ਮ-ਸਹਰ-ਲਈ-ਘਰ-ਛਡਆ" class="slide level1">
+<h1>ਜਿਸ ਦਿਨ ਮੈਂ ਸ਼ਹਿਰ ਲਈ ਘਰ ਛੱਡਿਆ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
-<p>ਮੈਂ ਗਾ ਰਿਹਾ ਹਾਂ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
+<p>ਮੇਰੇ ਪਿੰਡ ਦਾ ਛੋਟਾ ਬੱਸ ਸਟਾਪ ਲੋਕਾਂ ਅਤੇ ਓਵਰਲੋਡ ਬੱਸਾਂ ਨਾਲ ਰੁੱਝਿਆ ਹੋਇਆ ਸੀ I ਜ਼ਮੀਨ ਤੇ ਹੋਰ ਵੀ ਚੀਜ਼ਾਂ ਲੋਡ ਕਰਨ ਵਾਲੀਆਂ ਪਈਆਂ ਸਨ I ਟਾਊਟ ਰੌਲਾ ਪਾ ਕੇ ਬੱਸਾਂ ਕਿੱਥੇ ਜਾ ਰਹੀਆਂ ਹਨ ਦੱਸ ਰਹੇ ਸਨ।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
-<p>ਉਹ ਹੱਥ ਹਿਲਾਅ ਰਹੀ ਹੈ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
+<p>&quot;ਸ਼ਹਿਰ! ਸ਼ਹਿਰ! ਪੱਛਮ ਵੱਲ!&quot; ਮੈਂ ਇੱਕ ਟਾਊਟ ਰੋਲਾ ਪਾਉਂਦਾ ਸੁਣਿਆ। ਮੈਂਨੂੰ ਉਹ ਬੱਸ ਫੜਨ ਦੀ ਲੋੜ ਸੀ।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
-<p>ਮੈਂ ਤਾੜੀ ਮਾਰ ਰਿਹਾ ਹਾਂ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/04.jpg" /></p>
+<p>ਸ਼ਹਿਰ ਵੱਲ ਦੀ ਬੱਸ ਲਗਭਗ ਭਰੀ ਹੋਈ ਸੀ, ਪਰ ਹੋਰ ਲੋਕ ਅਜੇ ਵੀ ਚੜਣ ਲਈ ਧੱਕੇ ਦੇ ਰਹੇ ਸਨ। ਕੁਝ ਲੋਕਾਂ ਨੇ ਬੱਸ ਦੇ ਥੱਲੇ ਆਪਣਾ ਸਾਮਾਨ ਰੱਖਿਆ ਅਤੇ ਹੋਰਾਂ ਨੇ ਅੰਦਰ ਸ਼ੈਲਫਾਂ ਤੇ ਸਮਾਨ ਟਕਾਇਆ I</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
-<p>ਉਹ ਅੰਗੜਾਈ ਲੈ ਰਹੀ ਹੈ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/05.jpg" /></p>
+<p>ਨਵੇਂ ਯਾਤਰੀ ਹੱਥਾਂ ਵਿੱਚ ਟਿਕਟਾਂ ਫ਼ੜੀ, ਭੀੜੀ ਬੱਸ ਵਿਚ ਬੈਠਣ ਲਈ ਜਗ੍ਹਾ ਲੱਭ ਰਹੇ ਸਨ। ਮਹਿਲਾਵਾਂ ਆਪਣੇ ਨੌਜਵਾਨ ਬੱਚਿਆਂ ਨੂੰ ਲੰਬੇ ਸਫ਼ਰ ਲਈ ਸੁਖਮਈ ਬਣਾ ਰਹੀਆਂ ਸਨ।</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
-<p>ਉਹ ਬੁਲਾ ਰਿਹਾ ਹੈ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
+<p>ਮੈਂ ਇੱਕ ਖਿੜਕੀ ਨਾਲ ਕੁਚਲ ਕੇ ਬੈਠ ਗਿਆ। ਮੇਰੇ ਨਾਲ ਇੱਕ ਵਿਅਕਤੀ ਹਰੇ ਪਲਾਸਟਿਕ ਬੈਗ ਨੂੰ ਘੁੱਟ ਕੇ ਫੜੀ ਬੈਠਾ ਸੀI ਉਸ ਨੇ ਪੁਰਾਣੀ ਜੁੱਤੀ ਅਤੇ ਘਸਿਆ ਕੋਟ ਪਾਇਆ ਹੋਇਆ ਸੀ ਅਤੇ ਉਹ ਘਬਰਾਇਆ ਹੋਇਆ ਦਿੱਖ ਰਿਹਾ ਸੀ।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
-<p>ਮੈਂ ਜਵਾਬ ਦੇ ਰਿਹਾ ਹਾਂ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
+<p>ਮੈਂ ਬੱਸ ਤੋਂ ਬਾਹਰ ਵੇਖ ਕੇ ਸੋਚਿਆ ਕਿ ਮੈਂ ਆਪਣਾ ਪਿੰਡ ਛੱਡ ਕੇ ਚਲਿਆ ਸੀ, ਜਿੱਥੇ ਮੈਂ ਵੱਡਾ ਹੋਇਆ ਸੀ। ਮੈਂ ਵੱਡੇ ਸ਼ਹਿਰ ਨੂੰ ਜਾ ਰਿਹਾ ਸੀ।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
-<p>ਉਹ ਸੁਣ ਰਹੀ ਹੈ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/08.jpg" /></p>
+<p>ਲੋਡਿਂਗ ਪੂਰੀ ਹੋ ਗਈ ਸੀ ਅਤੇ ਸਾਰੇ ਯਾਤਰੀ ਬੈਠ ਗਏ ਸਨ। ਵਪਾਰੀ ਹਾਲੇ ਵੀ ਯਾਤਰੀਆਂ ਨੂੰ ਆਪਣਾ ਮਾਲ ਵੇਚਣ ਲਈ ਅੰਦਰ ਘੁਸ ਰਹੇ ਸਨ। ਹਰ ਇੱਕ ਵਪਾਰੀ ਉਪਲਬਧ ਸਮਾਨ ਦਾ ਨਾਮ ਲੈੇ ਕੇ ਹੋਕਾ ਦੇ ਰਿਹਾ ਸੀ। ਮੈਨੂੰ ਉਹਨਾਂ ਦੇ ਸ਼ਬਦ ਹਸਾਉਣ ਵਾਲੇ ਲਗੇ।</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
-<p>ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/09.jpg" /></p>
+<p>ਕੁਝ ਯਾਤਰੀਆਂ ਨੇ ਪੀਣ ਨੂੰ ਖਰੀਦਿਆ, ਹੋਰਾਂ ਨੇ ਛੋਟੇ ਸਨੈਕਸ ਖਰੀਦੇ ਅਤੇ ਚੱਬਣ ਲਗ ਪਏ। ਮੇਰੇ ਵਰਗੇ, ਜਿੰਨ੍ਹਾਂ ਕੋਲ ਪੈਸੇ ਨਹੀਂ ਸਨ ਦੇਖਦੇ ਹੀ ਰਹੇ।</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,84 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ਤਸ-ਕ-ਕਰ-ਰਹ-ਹ-1">ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ?</h2>
-<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
+<p>ਇਹ ਸਾਰੇ ਕੰਮ ਬੱਸ ਦੀ ਹੂਟ ਨਾਲ ਰੁੱਕ ਗਏ ਜਿਸ ਦਾ ਮਤਲਬ ਸੀ ਕਿ ਬੱਸ ਚਲਣ ਵਾਲੀ ਹੈ। ਟਾਊਟਾਂ ਨੇ ਵਪਾਰੀਅਾਂ ਨੂੰ ਬਾਹਰ ਜਾਣ ਲਈ ਅਵਾਜ਼ ਦਿੱਤੀ।</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/11.jpg" /></p>
+<p>ਵਪਾਰੀ ਬੱਸ ਦੇ ਬਾਹਰ ਜਾਣ ਲਈ ਇੱਕ-ਦੂਜੇ ਨੂੰ ਧੱਕੇ ਦੇ ਰਹੇ ਸੀ। ਕੁਝ ਯਾਤਰੀਆਂ ਨੂੰ ਭਾਨ ਵਾਪਸ ਦੇ ਰਹੇ ਸਨ। ਹੋਰ ਆਖਰੀ ਮਿੰਟ ਵਿੱਚ ਹੋਰ ਸਮਾਨ ਵੇਚਣ ਦੀ ਕੋਸ਼ਿਸ਼ ਕਰ ਰਹੇ ਸਨ।</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/12.jpg" /></p>
+<p>ਜਿਉਂ ਹੀ ਬੱਸ ਸਟਾਪ ਤੋਂ ਬੱਸ ਤੁਰੀ, ਮੈਂ ਖਿੜਕੀ ਦੇ ਬਾਹਰ ਤਾੜ ਰਿਹਾ ਸੀ। ਮੈਂ ਸੋਚਿਆ ਜੇ ਮੈਂ ਕਦੇ ਮੁੜ ਕੇ ਵਾਪਸ ਮੇਰੇ ਪਿੰਡ ਵੱਲ ਆਵਾਂਗਾ।</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
+<p>ਸਫ਼ਰ ਦੇ ਵਾਧੇ ਨਾਲ, ਬੱਸ ਦੇ ਅੰਦਰ ਬਹੁਤ ਗਰਮੀ ਹੋ ਗਈ ਸੀ। ਸੌਣ ਦੀ ਉਮੀਦ ਵਿੱਚ, ਮੈਂ ਆਪਣੀਆਂ ਅੱਖਾਂ ਨੂੰ ਬੰਦ ਕੀਤਾ।</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
+<p>ਪਰ ਮੇਰਾ ਮਨ ਵਾਪਸ ਘਰ ਵੱਲ ਗਿਆ। ਕੀ ਮੇਰੀ ਮਾਂ ਸੁਰੱਖਿਅਤ ਰਹੇਗੀ? ਕੀ ਮੇਰੇ ਖਰਗੋਸ਼ ਕੋਈ ਪੈਸਾ ਪ੍ਰਾਪਤ ਕਰਨਗੇ? ਕੀ ਮੇਰਾ ਭਰਾ ਮੇਰੇ ਰੁੱਖਾਂ ਦੇ ਬੂਟਿਆਂ ਨੂੰ ਪਾਣੀ ਦੇਣਾ ਯਾਦ ਰੱਖੇਗਾ?</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/15.jpg" /></p>
+<p>ਰਸਤੇ ਵਿੱਚ, ਮੈਂ ਉਸ ਜਗ੍ਹਾ ਦਾ ਨਾਮ ਯਾਦ ਕਰ ਰਿਹਾ ਸੀ ਜਿੱਥੇ ਮੇਰੇ ਚਾਚਾ ਜੀ ਵੱਡੇ ਸ਼ਹਿਰ ਵਿਚ ਰਹਿੰਦੇ ਸਨ। ਮੈਂ ਅਜੇ ਵੀ ਬੁੜ-ਬੜ੍ਹਾ ਰਿਹਾ ਸੀ ਜਦ ਮੈਨੂੰ ਨੀਂਦ ਆ ਗਈ।</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
+<p>ਨੌ ਘੰਟੇ ਬਾਅਦ, ਉੱਚੇ ਖੜਕੇ ਅਤੇ ਪਿੰਡ ਨੂੰ ਵਾਪਸ ਜਾ ਰਹੇ ਯਾਤਰੀਆਂ ਲਈ ਹਾਕਾਂ ਨਾਲ ਮੇਰੀ ਅੱਖ ਖੁਲ ਗਈ। ਮੈਂ ਆਪਣੇ ਛੋਟੇ ਬੈਗ ਨੂੰ ਫੜ੍ਹਿਆ ਅਤੇ ਬੱਸ ਦੇ ਬਾਹਰ ਛਾਲ ਮਾਰੀ I</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
+<p>ਵਾਪਸੀ ਵਾਲੀ ਬੱਸ ਜਲਦੀ ਭਰ ਗਈI ਜਲਦੀ ਇਹ ਬੱਸ ਵਾਪਸ ਪੂਰਬ ਵੱਲ ਜਾਵੇਗੀ। ਹੁਣ ਮੇਰੇ ਲਈ ਸਭ ਤੋਂ ਮਹੱਤਵਪੂਰਨ ਗੱਲ ਮੇਰੇ ਚਾਚੇ ਦੇ ਘਰ ਦੀ ਤਲਾਸ਼ ਸ਼ੁਰੂ ਕਰਨ ਵਾਲੀ ਸੀ।</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ਜਸ-ਦਨ-ਮ-ਸਹਰ-ਲਈ-ਘਰ-ਛਡਆ-1">ਜਿਸ ਦਿਨ ਮੈਂ ਸ਼ਹਿਰ ਲਈ ਘਰ ਛੱਡਿਆ</h2>
+<strong>Text:</strong> Lesley Koyi, Ursula Nafula<br> <strong>Illustrations:</strong> Brian Wambi<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-are-you-doing'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/day-i-left-home-city'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
