--- a/stories/pa/0342_ਸਜ਼ਾ_slides.html
+++ b/stories/pa/0342_ਸਜ਼ਾ_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
-<p>ਮੇਰਾ ਭਰਾ ਰਹੀਮ ਲਾਲਚੀ ਹੈI ਉਸ ਨੇ ਸਾਰੇ ਫਲਾਂ ਦਾ ਸੁਆਦ ਚੱਖਿਆ। ਉਸ ਨੇ ਬਹੁਤ ਸਾਰਾ ਖਾ ਲਿਆ।</p>
+<p>ਮੇਰਾ ਭਰਾ ਰਹੀਮ ਲਾਲਚੀ ਹੈ। ਉਸ ਨੇ ਸਾਰੇ ਫਲਾਂ ਦਾ ਸੁਆਦ ਚੱਖਿਆ। ਉਸ ਨੇ ਬਹੁਤ ਸਾਰਾ ਖਾ ਲਿਆ।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
-<p>&quot;ਦੇਖੋ ਰਹੀਮ ਨੇ ਕੀ ਕੀਤਾ!&quot; ਮੇਰਾ ਛੋਟਾ ਭਰਾ ਚਿਲਾਇਆ। &quot;ਰਹੀਮ ਨਟਖਟ ਅਤੇ ਸੁਆਰਥੀ ਹੈ,&quot; ਮੈਂ ਆਖਿਆ I</p>
+<p>&quot;ਦੇਖੋ ਰਹੀਮ ਨੇ ਕੀ ਕੀਤਾ!&quot; ਮੇਰਾ ਛੋਟਾ ਭਰਾ ਚਿਲਾਇਆ। &quot;ਰਹੀਮ ਨਟਖਟ ਅਤੇ ਸੁਆਰਥੀ ਹੈ,&quot; ਮੈਂ ਆਖਿਆ ।</p>
 <center>
 <strong>4</strong>
 </center>
