--- a/stories/pa/0027_ਫ਼ੈਸਲਾ.html
+++ b/stories/pa/0027_ਫ਼ੈਸਲਾ.html
@@ -49,7 +49,7 @@ Ursula Nafula<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
 
-<p>ਮੇਰੇ ਪਿੰਡ ਵਿੱਚ ਬਹੁਤ ਸਾਰੀਆਂ ਸਮੱਸਿਆਵਾਂ ਸਨl ਅਸੀਂ ਇੱਕ ਟੂਟੀ ਤੋਂ ਪਾਣੀ ਲਿਆਉਣ ਲਈ ਲੰਬੀ ਲਾਈਨ ਬਣਾਉਂਦੇ ਸੀ।</p>
+<p>ਮੇਰੇ ਪਿੰਡ ਵਿੱਚ ਬਹੁਤ ਸਾਰੀਆਂ ਸਮੱਸਿਆਵਾਂ ਸਨ।। ਅਸੀਂ ਇੱਕ ਟੂਟੀ ਤੋਂ ਪਾਣੀ ਲਿਆਉਣ ਲਈ ਲੰਬੀ ਲਾਈਨ ਬਣਾਉਂਦੇ ਸੀ।</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
