--- a/stories/pa/0027_ਫ਼ੈਸਲਾ_slides.html
+++ b/stories/pa/0027_ਫ਼ੈਸਲਾ_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
-<p>ਮੇਰੇ ਪਿੰਡ ਵਿੱਚ ਬਹੁਤ ਸਾਰੀਆਂ ਸਮੱਸਿਆਵਾਂ ਸਨl ਅਸੀਂ ਇੱਕ ਟੂਟੀ ਤੋਂ ਪਾਣੀ ਲਿਆਉਣ ਲਈ ਲੰਬੀ ਲਾਈਨ ਬਣਾਉਂਦੇ ਸੀ।</p>
+<p>ਮੇਰੇ ਪਿੰਡ ਵਿੱਚ ਬਹੁਤ ਸਾਰੀਆਂ ਸਮੱਸਿਆਵਾਂ ਸਨ।। ਅਸੀਂ ਇੱਕ ਟੂਟੀ ਤੋਂ ਪਾਣੀ ਲਿਆਉਣ ਲਈ ਲੰਬੀ ਲਾਈਨ ਬਣਾਉਂਦੇ ਸੀ।</p>
 <center>
 <strong>1</strong>
 </center>
