--- a/stories/pa/0089_ਖਲਾਈ-ਪੌਦਿਆਂ-ਨਾਲ-ਗੱਲਬਾਤ-ਕਰਦੀ-ਹੈ_slides.html
+++ b/stories/pa/0089_ਖਲਾਈ-ਪੌਦਿਆਂ-ਨਾਲ-ਗੱਲਬਾਤ-ਕਰਦੀ-ਹੈ_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p>ਖਲਾਈ ਸਕੂਲ ਤੋਂ ਵਾਪਸ ਆਕੇ, ਸੰਤਰੇ ਦੇ ਰੁੱਖ ਨੂੰ ਮਿਲਦੀ ਹੈ। &quot;ਕੀ ਤੁਹਾਡੇ ਸੰਤਰੇ ਹੁਣ ਪੱਕੇ ਹਨ?&quot; ਖਲਾਈ ਪੁੱਛਦੀ ਹੈ I</p>
+<p>ਖਲਾਈ ਸਕੂਲ ਤੋਂ ਵਾਪਸ ਆਕੇ, ਸੰਤਰੇ ਦੇ ਰੁੱਖ ਨੂੰ ਮਿਲਦੀ ਹੈ। &quot;ਕੀ ਤੁਹਾਡੇ ਸੰਤਰੇ ਹੁਣ ਪੱਕੇ ਹਨ?&quot; ਖਲਾਈ ਪੁੱਛਦੀ ਹੈ ।</p>
 <center>
 <strong>7</strong>
 </center>
