--- a/stories/pa/0234_ਐਂਨਡਿਸਵਾ-ਫੁੱਟਬਾਲ-ਸਟਾਰ.html
+++ b/stories/pa/0234_ਐਂਨਡਿਸਵਾ-ਫੁੱਟਬਾਲ-ਸਟਾਰ.html
@@ -63,7 +63,7 @@ Eden Daniels<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
 
-<p>ਮੁੰਡਿਆਂ ਨੇ ਉਸ ਨੂੰ ਨੈੱਟਬਾਲ ਖੇਡਣ ਲਈ ਕਿਹਾl ਉਹਨਾਂ ਨੇ ਕਿਹਾ ਕਿ ਨੈੱਟਬਾਲ ਕੁੜੀਆਂ ਲਈ ਹੈ ਅਤੇ ਫੁਟਬਾਲ ਮੁੰਡਿਆਂ ਲਈ ਹੈ। ਐਂਨਡਿਸਵਾ ਨਿਰਾਸ ਸੀ</p>
+<p>ਮੁੰਡਿਆਂ ਨੇ ਉਸ ਨੂੰ ਨੈੱਟਬਾਲ ਖੇਡਣ ਲਈ ਕਿਹਾ। ਉਹਨਾਂ ਨੇ ਕਿਹਾ ਕਿ ਨੈੱਟਬਾਲ ਕੁੜੀਆਂ ਲਈ ਹੈ ਅਤੇ ਫੁਟਬਾਲ ਮੁੰਡਿਆਂ ਲਈ ਹੈ। ਐਂਨਡਿਸਵਾ ਨਿਰਾਸ ਸੀ</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
