--- a/stories/pa/0296_ਟੌਮ-ਕੇਲੇ-ਵੇਚਣ-ਵਾਲਾ_slides.html
+++ b/stories/pa/0296_ਟੌਮ-ਕੇਲੇ-ਵੇਚਣ-ਵਾਲਾ_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
-<p>ਪਰ ਕੋਈ ਵੀ ਟੌਮ ਦੇ ਕੇਲੇ ਖਰੀਦ ਨਹੀਂ ਰਿਹਾ। ਉਹ ਔਰਤਾਂ ਤੋਂ ਫਲ ਖਰੀਦਣਾ ਪਸੰਦ ਕਰਦੇ ਹਨI</p>
+<p>ਪਰ ਕੋਈ ਵੀ ਟੌਮ ਦੇ ਕੇਲੇ ਖਰੀਦ ਨਹੀਂ ਰਿਹਾ। ਉਹ ਔਰਤਾਂ ਤੋਂ ਫਲ ਖਰੀਦਣਾ ਪਸੰਦ ਕਰਦੇ ਹਨ।</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
-<p>&quot;ਸਾਡੇ ਭਾਈਚਾਰੇ ਵਿੱਚ, ਸਿਰਫ਼ ਔਰਤਾਂ ਫਲ ਵੇਚਦੀਆਂ ਹਨ,&quot; ਲੋਕ ਕਹਿੰਦੇ ਹਨ I &quot;ਇਹ ਕਿਸ ਕਿਸਮ ਦਾ ਆਦਮੀ ਹੈ?&quot; ਲੋਕ ਪੁੱਛਦੇ।</p>
+<p>&quot;ਸਾਡੇ ਭਾਈਚਾਰੇ ਵਿੱਚ, ਸਿਰਫ਼ ਔਰਤਾਂ ਫਲ ਵੇਚਦੀਆਂ ਹਨ,&quot; ਲੋਕ ਕਹਿੰਦੇ ਹਨ । &quot;ਇਹ ਕਿਸ ਕਿਸਮ ਦਾ ਆਦਮੀ ਹੈ?&quot; ਲੋਕ ਪੁੱਛਦੇ।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
-<p>ਇੱਕ ਔਰਤ ਟੋਕਰੀ ਵਿਚੋਂ ਕੁੱਝ ਕੇਲੇ ਚੁੱਕਦੀ ਹੈ। ਉਹ ਕੇਲਿਆਂ ਨੂੰ ਧਿਆਨ ਨਾਲ ਵੇਖਦੀ ਹੈ I</p>
+<p>ਇੱਕ ਔਰਤ ਟੋਕਰੀ ਵਿਚੋਂ ਕੁੱਝ ਕੇਲੇ ਚੁੱਕਦੀ ਹੈ। ਉਹ ਕੇਲਿਆਂ ਨੂੰ ਧਿਆਨ ਨਾਲ ਵੇਖਦੀ ਹੈ ।</p>
 <center>
 <strong>7</strong>
 </center>
