--- a/stories/pa/0342_ਸਜ਼ਾ.html
+++ b/stories/pa/0342_ਸਜ਼ਾ.html
@@ -63,14 +63,14 @@ Adelheid Marie Bwire<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
 
-<p>ਮੇਰਾ ਭਰਾ ਰਹੀਮ ਲਾਲਚੀ ਹੈI ਉਸ ਨੇ ਸਾਰੇ ਫਲਾਂ ਦਾ ਸੁਆਦ ਚੱਖਿਆ। ਉਸ ਨੇ ਬਹੁਤ ਸਾਰਾ ਖਾ ਲਿਆ।</p>
+<p>ਮੇਰਾ ਭਰਾ ਰਹੀਮ ਲਾਲਚੀ ਹੈ। ਉਸ ਨੇ ਸਾਰੇ ਫਲਾਂ ਦਾ ਸੁਆਦ ਚੱਖਿਆ। ਉਸ ਨੇ ਬਹੁਤ ਸਾਰਾ ਖਾ ਲਿਆ।</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
 
-<p>“ਦੇਖੋ ਰਹੀਮ ਨੇ ਕੀ ਕੀਤਾ!” ਮੇਰਾ ਛੋਟਾ ਭਰਾ ਚਿਲਾਇਆ। “ਰਹੀਮ ਨਟਖਟ ਅਤੇ ਸੁਆਰਥੀ ਹੈ,” ਮੈਂ ਆਖਿਆ I</p>
+<p>“ਦੇਖੋ ਰਹੀਮ ਨੇ ਕੀ ਕੀਤਾ!” ਮੇਰਾ ਛੋਟਾ ਭਰਾ ਚਿਲਾਇਆ। “ਰਹੀਮ ਨਟਖਟ ਅਤੇ ਸੁਆਰਥੀ ਹੈ,” ਮੈਂ ਆਖਿਆ ।</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
