--- a/stories/index.html
+++ b/stories/index.html
@@ -2333,6 +2333,12 @@
       <td><a name="pa0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0291</td>
+      <td><a href="/stories/pa/0291_ਜੋ-ਵੁਸੀ-ਦੀ-ਭੈਣ-ਨੇ-ਕਿਹਾ_slides.html" target="_blank">ਜੋ ਵੁਸੀ ਦੀ ਭੈਣ ਨੇ ਕਿਹਾ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0296</td>
       <td><a href="/stories/pa/0296_ਟੌਮ-ਕੇਲੇ-ਵੇਚਣ-ਵਾਲਾ_slides.html" target="_blank">ਟੌਮ ਕੇਲੇ ਵੇਚਣ ਵਾਲਾ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3273,7 +3279,7 @@
       <td>0291</td>
       <td><a href="http://my.africanstorybook.org/stories/what-vusis-sister-said">What Vusi’s sister said</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0291">ko</a>, <a href="#tl0291">tl</a>, <a href="#zh0291">zh</a></td>
+      <td><a href="#ko0291">ko</a>, <a href="#pa0291">pa</a>, <a href="#tl0291">tl</a>, <a href="#zh0291">zh</a></td>
     </tr>
     <tr>
       <td>0294</td>
