--- a/stories/index.html
+++ b/stories/index.html
@@ -2327,6 +2327,12 @@
       <td><a name="pa0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0243</td>
+      <td><a href="/stories/pa/0243_ਦਾਦੀ-ਦੇ-ਨਾਲ-ਛੁੱਟੀਆਂ_slides.html" target="_blank">ਦਾਦੀ ਦੇ ਨਾਲ ਛੁੱਟੀਆਂ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0243"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0271</td>
       <td><a href="/stories/pa/0271_ਦੋ_slides.html" target="_blank">ਦੋ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3231,7 +3237,7 @@
       <td>0243</td>
       <td><a href="http://my.africanstorybook.org/stories/holidays-grandmother">Holidays with grandmother</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#tl0243">tl</a>, <a href="#zh0243">zh</a></td>
+      <td><a href="#pa0243">pa</a>, <a href="#tl0243">tl</a>, <a href="#zh0243">zh</a></td>
     </tr>
     <tr>
       <td>0248</td>
