--- a/stories/index.html
+++ b/stories/index.html
@@ -2333,6 +2333,12 @@
       <td><a name="pa0243"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0262</td>
+      <td><a href="/stories/pa/0262_ਮਗੋਜ਼ਵੀ_slides.html" target="_blank">ਮਗੋਜ਼ਵੀ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0262"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0271</td>
       <td><a href="/stories/pa/0271_ਦੋ_slides.html" target="_blank">ਦੋ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3255,7 +3261,7 @@
       <td>0262</td>
       <td><a href="http://my.africanstorybook.org/stories/magozwe-0">Magozwe</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#tl0262">tl</a>, <a href="#zh0262">zh</a></td>
+      <td><a href="#pa0262">pa</a>, <a href="#tl0262">tl</a>, <a href="#zh0262">zh</a></td>
     </tr>
     <tr>
       <td>0264</td>
